--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -12,9 +12,9 @@ db: table
 
 
 jobs: get-hire
-  build: toggle_tracking
+  build: toggle_tracking, liner
 
-    runs-on: clone_os, ubuntu-latest
+    runs-on: winer, clone_os, ubuntu-latest
 
     steps:
     - uses: actions/checkin@v
